# opencli_rs_plus

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  fix.diff  fix.sh  fix_test.diff  lesson.md  template_summary.md  test_electron.diff  test_fix.sh  test_scheduler.diff
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
adapters/36kr/: hot.yaml  meta.yaml  news.yaml
adapters/amazon/: meta.yaml  search.yaml
adapters/antigravity/: meta.yaml
adapters/apple-podcasts/: meta.yaml
adapters/arxiv/: meta.yaml
adapters/band/: bands.yaml  meta.yaml  posts.yaml
adapters/barchart/: meta.yaml
adapters/bbc/: meta.yaml
adapters/bilibili/: meta.yaml
adapters/bloomberg/: meta.yaml
adapters/bluesky/: meta.yaml
adapters/boss/: meta.yaml
adapters/chaoxing/: meta.yaml
adapters/chatgpt/: meta.yaml
adapters/chatwise/: meta.yaml
adapters/codex/: meta.yaml
adapters/coupang/: meta.yaml
adapters/crates/: info.yaml  meta.yaml  search.yaml
adapters/ctrip/: meta.yaml
adapters/cursor/: meta.yaml
adapters/devto/: meta.yaml
adapters/dictionary/: meta.yaml
adapters/discord-app/: meta.yaml
adapters/douban/: meta.yaml
adapters/doubao/: meta.yaml
adapters/doubao-app/: meta.yaml
adapters/douyin/: meta.yaml  profile.yaml  videos.yaml
adapters/facebook/: meta.yaml
adapters/gemini/: ask.yaml  canvas.yaml  deep-research.yaml  for-you.yaml  gems.yaml  history.yaml  image.yaml  meta.yaml  music.yaml  mystuff.yaml  status.yaml  video.yaml  write.yaml
adapters/google/: meta.yaml
adapters/grok/: meta.yaml
adapters/hackernews/: meta.yaml
adapters/hf/: meta.yaml
adapters/imdb/: meta.yaml  search.yaml  top.yaml  trending.yaml
adapters/instagram/: meta.yaml
adapters/jd/: item.yaml  meta.yaml
adapters/jike/: meta.yaml
adapters/jimeng/: meta.yaml
adapters/linkedin/: meta.yaml
crates/opencli-rs-cli/: Cargo.toml  build.rs
crates/opencli-rs-cli/src/: args.rs  cli_builder.rs  dispatch.rs  execution.rs  lib.rs  main.rs  runner.rs
crates/opencli-rs-cli/src/commands/: completion.rs  doctor.rs  feedback.rs  mod.rs  uninstall.rs  update.rs
crates/opencli-rs-daemon/: Cargo.toml
crates/opencli-rs-daemon/src/: adapter_manager.rs  client.rs  index.rs  issues.rs  lib.rs  main.rs  plugin.rs  scheduler.rs  socket.rs  store.rs  tools.rs
crates/opencli-rs-daemon/tests/: issues_test.rs  store_test.rs  tools_test.rs
crates/opencli-rs-engine/: Cargo.toml
crates/opencli-rs-engine/src/: lib.rs
docs/: adapter-maintenance.md  changelog.md  daemon.md  develop.md  idea.md  qwen-api-exploration.md  qwen-api-reference.md  qwen-session-export.md  search.md  strategy.md
extension/: manifest.json  vite.config.ts
scripts/: classify-adapters.sh  install.sh  regression-smoke.sh  test-all-commands.sh  verify-release-version.sh
summaries/: antigravity.md  apple-podcasts.md  arxiv.md  barchart.md  bbc.md  bilibili.md  bloomberg.md  boss.md  chaoxing.md  chatgpt.md  chatwise.md  codex.md  coupang.md  ctrip.md  cursor.md  devto.md  discord-app.md  douban.md  doubao-app.md  doubao.md  facebook.md  gemini.md  grok.md  hackernews.md  hf.md  instagram.md  jike.md  jimeng.md  linkedin.md  linux-do.md  lobsters.md  medium.md  notion.md  reddit.md  reuters.md  sinablog.md  sinafinance.md  smzdm.md  stackoverflow.md  steam.md  (+15 more)
tools/: ripgrep.md
(+125 files in other folders)
