[package]
name = "opencli-rs"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "opencli_rs_cli"
path = "src/lib.rs"

[dependencies]
opencli-rs-core = { path = "../opencli-rs-core" }
opencli-rs-pipeline = { path = "../opencli-rs-pipeline" }
opencli-rs-browser = { path = "../opencli-rs-browser" }
opencli-rs-output = { path = "../opencli-rs-output" }
opencli-rs-discovery = { path = "../opencli-rs-discovery" }
opencli-rs-ai = { path = "../opencli-rs-ai" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
colored = "2"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
urlencoding = "2"
webbrowser = "1"
